# privacy-engine

./: .gitignore  Cargo.toml  README.md  build-simple.sh  build-wasm.sh  wasm-pack.toml
demo/: index.html  package.json  serve.py
docs/: README.md  SUMMARY.md  architecture.md  book.json  getting-started.md
docs/examples/: README.md
docs/protocols/: README.md  starknet.md  x25519.md
docs/styles/: website.css
src/: decrypt.rs  encrypt.rs  lib.rs  types.rs  wasm.rs
src/chains/: mod.rs  starknet.rs  x25519.rs
src/traits/: crypto.rs
tests/: starknet_multi.rs  usage.rs
wasm-client/: index.d.ts  index.js
