[package]
name = "privacy-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
hkdf = "0.12.4"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
starknet-types-core = "0.1"
thiserror = "2.0.10"
x25519-dalek = "2.0.1"
hex = "0.4"
starknet-crypto = "0.6"
starknet-core = "0.15.0"
stark-curve = "0.1.3"
sha2 = "0.10.9"
generic-array = "1.2.0"
dotenv = "0.15.0"

